--- a/requirements_mac.txt
+++ b/requirements_mac.txt
@@ -29,6 +29,7 @@ imageio==2.37.0
 importlib_resources==6.5.2
 jax==0.5.0
 jaxlib==0.5.0
+jax-metal==0.1.1
 labmaze==1.0.6
 lxml==5.3.2
 markdown-it-py==3.0.0
@@ -70,5 +71,6 @@ typing-inspection==0.4.0
 typing_extensions==4.13.2
 urllib3==2.4.0
 wandb==0.19.9
+wheel==0.45.1
 wrapt==1.17.2
 zipp==3.21.0
